--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: python
 python:
   - "3.6"
 install:
-  - pip install -r python-telegram-bot psycopg2-binary pytz tzlocal pySocks
+  - pip3 install python-telegram-bot psycopg2-binary pytz tzlocal pySocks
