--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ python:
 install:
   - pip3 install python-telegram-bot psycopg2-binary pytz tzlocal pySocks
 script:
-  - bot.py
+  - python3 bot.py
